style: correção de responsividade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <header>
+            <h1>Flavia</h1>
             <div class="header-content"></div>
             <div class="header-content2"></div>
         </header>
