create: nome na section

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
     <div class="container">
         <header>
-            <h1>Flavia</h1>
             <div class="header-content"></div>
             <div class="header-content2"></div>
         </header>
 
         <section>
-            <div class="section-content"></div>
+            <div class="section-content"><p>Flavia</p></div>
         </section>
 
         <article>
